# llm-app-maestria

./: .env.example  .gitignore  Makefile  README.md  alimentos_carnicos.md  bulk_scraper.py  example_qa.py  pdf_pro_extractor.py  pdf_to_md.py  pyproject.toml  requirements.txt  scraper.py
data/processed/: base_conocimiento_chunks.md
data/processed/dataset_carnicos/: Informe de prácticas.md  Informe-de-sostenibilidad-resumen-grupo-nutresa.md  Politica_habeasdata.md  bienestar-animal.md  boletin-de-prensa.md  carnes-frescas.md  cartilla-ganado-sostenible.md  contacto-ant.md  informacion.md  informacion_basica.md  novedades-producto.md  nuestro-compromiso.md  preguntas-frecuentes.md  salesforce-form.md
dataset_carnicos/: Estudio Sector Porcino 15-9-2020.md  GranadaBayron2021.md  buenas-practicas.md  condiciones-de-uso.md  derechos-del-consumidor.md  link-de-interes.md  mensaje-enviado.md  mision-vision.md  novedades-servicio.md  nuestra-historia.md  politica-de-uso.md  proveedores-2.md  resultados-financieros.md  sugerencias.md  venta.md
docs/: GUIA_RAPIDA.md  QA_SYSTEM.md  Requisitos.txt  definicion_alcance.md  informe_modulo_1.md
src/carnicos_kb/: __init__.py  chunking.py  knowledge_loader.py  paths.py  pdf_extractor.py  pdf_text_extractor.py  qa_system.py  scraper.py  streamlit_app.py  streamlit_runner.py
tests/: test_chunking.py
